Some Bonus done

--- a/mission-planning-dashboard/src/app/app.component.css
+++ b/mission-planning-dashboard/src/app/app.component.css
@@ -1,4 +1,11 @@
 .box {
     display: flex;
     padding: 10px;
+    align-self: center;
+}
+
+.box div {
+    padding: 20px;
+    border-right: dotted;
+    border-left: dotted;
 }
