--- a/mission-planning-dashboard/src/app/app.component.html
+++ b/mission-planning-dashboard/src/app/app.component.html
@@ -1,6 +1,14 @@
 <app-header></app-header>
+<hr>
 <div class="box">
-  <app-crew></app-crew>
-  <app-equipment></app-equipment>
-  <app-experiments></app-experiments>
+  <div>
+    <app-crew></app-crew>
+  </div>
+  <div>
+    <app-equipment></app-equipment>
+  </div>
+  <div>
+    <app-experiments></app-experiments>
+  </div>
 </div>
+<hr>
